messaging_app/green_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app-green
  labels:
    app: messaging-app
    version: green
    # no "current" label initially, so it does not receive traffic.
spec:
  replicas: 2
  selector:
    matchLabels:
      app: messaging-app
      version: green
  template:
    metadata:
      labels:
        app: messaging-app
        version: green
    spec:
      containers:
      - name: messaging-app
        image: messaging-app-gv:latest  # use your new image version (e.g. green version)
        ports:
          - containerPort: 8000
